tests/solidity-semantic-tests/out/errors/panic_via_import/C.clear.teal
#pragma version 12
#pragma typetrack false

// /tmp/multisource__6rpxmj4/s2.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
